# lucas-browser

./: .gitignore  Makefile  QUICK_START.md  README.md  SKILL.md  STRUCTURE.md  activate.sh  install.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agents/: openai.yaml
config/: config.yaml  device_profiles.yaml
docs/: api_reference.md  configuration.md  raspberry_pi_optimization.md
examples/: task_basic_extract.json  task_table_download.json
scripts/: validate_config.py
src/: __init__.py  cli.py  index.py
src/actions/: __init__.py  form_filler.py  interaction_handler.py  scroll_handler.py
src/agent/: __init__.py  browser_agent.py
src/core/: __init__.py  browser_manager.py  network_monitor.py  page_pool.py  resource_monitor.py  session_manager.py  tab_orchestrator.py
src/extractors/: __init__.py  content_extractor.py  content_previewer.py  file_downloader.py  streaming_extractor.py  structure_analyzer.py  table_extractor.py
src/intelligence/: __init__.py  nlq_parser.py  relevance_filter.py  self_healing.py
src/stealth/: __init__.py  fingerprint_manager.py  stealth_engine.py
src/utils/: __init__.py  config_loader.py  helpers.py  logger.py
tests/: test_config_loader.py  test_extractors.py  test_file_downloader.py  test_fingerprint_manager.py  test_helpers.py  test_network_monitor.py  test_nlq_parser.py  test_page_pool.py  test_relevance_filter.py  test_self_healing.py  test_session_manager.py
